Minor doc corrections

--- a/doc/source/use_cases.ipynb
+++ b/doc/source/use_cases.ipynb
@@ -82,11 +82,7 @@
    "source": [
     "A sample of the UK calendar `clnd_uk` is shown below. It starts on Monday, the 17th of April, which was a holiday (Easter Monday), and ends on Monday the 24th, a regular business day.\n",
     "\n",
-    "<div class=\"alert alert-info\">\n",
-    "\n",
-    "**Note:** We take advantage of the nice formatting that jupyter notebooks provide for pandas dataframes. Instead of official ``print(clnd_uk(('17 Apr 2017', '24 Apr 2017')))``, we will convert the interval to dataframe and let jupyter display its contents.\n",
-    "\n",
-    "</div>\n"
+    "**Note:** We take advantage of the nice formatting that jupyter notebooks provide for pandas dataframes. Instead of official ``print(clnd_uk(('17 Apr 2017', '24 Apr 2017')))``, we will convert the interval to dataframe and let jupyter display its contents.\n"
    ]
   },
   {
