--- a/doc/source/use_cases.ipynb
+++ b/doc/source/use_cases.ipynb
@@ -233,7 +233,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our call center operates round-the-clock in shifts of varying length: 08:00 to 18:00 (10 hours), 18:00 to 02:00 (8 hours), and 02:00 to 08:00 (6 hours). An operator's schedule consists of one on duty shift followed by three off duty shifts. Hence, four teams of operators are needed. They are designated as 'A', 'B', 'C', and 'D'. Timeboard `clnd_cc` for the call center is built by the following code."
+    "Our call center operates round-the-clock in shifts of varying length: 08:00 to 18:00 (10 hours), 18:00 to 02:00 (8 hours), and 02:00 to 08:00 (6 hours). An operator's schedule consists of one on-duty shift followed by three off-duty shifts. Hence, four teams of operators are needed. They are designated as 'A', 'B', 'C', and 'D'. Timeboard `clnd_cc` for the call center is built by the following code."
    ]
   },
   {
@@ -854,7 +854,7 @@
     "\n",
     "- :py:meth:`.Workshift.rollforward` is called by name in line 5 and by proxy of operator ``+`` in lines 7 and 8.\n",
     "\n",
-    "When called without arguments (line 5) ``rollforward()`` returns the nearest on duty workshift. In terms of our calendar, this means the nearest business day. It may be either `project_start` date itself or the next working day if `project_start` is a weekend or a holiday. In Russia, the first 8 days of January 2017 were holidays, hence, ``clnd('01 Jan 2017').rollforward()`` returns 09 Jan 2017.\n",
+    "When called without arguments (line 5) ``rollforward()`` returns the nearest on-duty workshift. In terms of our calendar, this means the nearest business day. It may be either `project_start` date itself or the next working day if `project_start` is a weekend or a holiday. In Russia, the first 8 days of January 2017 were holidays, hence, ``clnd('01 Jan 2017').rollforward()`` returns 09 Jan 2017.\n",
     "\n",
     "When called with an integer argument, ``rollforward(n)`` moves `n` days toward the future skipping weekends and holidays. This is done in lines 7 and 8 where operator ``+`` is used as a shortcut for ``rollforward``. For example, note that ``rollforward(1)`` called on Friday, 26 Jan 2017 (the end of Development stage), returns Monday, 29 Jan 2017, which becomes the start of Acceptance stage."
    ]
@@ -987,7 +987,7 @@
     "\n",
     "- In line 3   ``clnd('17 April 2017', period='A')`` is a call of :py:meth:`.Timeboard.get_interval` returning an interval of shifts which belong to the calendar week 17-23 of April.\n",
     "\n",
-    "- :py:meth:`.Interval.workshifts` in line 6 returns a generator yielding all on duty workshifts of the interval. Shifts are classified as \"on duty\" or \"off duty\" according to the schedule which is supplied to the method. By default, the method uses the default schedule of the timeboard. It would not be suitable for our purpose as under the default schedule every shift is on duty (the call center is always working). Hence we passed a specific schedule which selects only shifts labeled with 'A'.\n",
+    "- :py:meth:`.Interval.workshifts` in line 6 returns a generator yielding all on-duty workshifts of the interval. Shifts are classified as \"on duty\" or \"off duty\" according to the schedule which is supplied to the method. By default, the method uses the default schedule of the timeboard. It would not be suitable for our purpose as under the default schedule every shift is on duty (the call center is always working). Hence we passed a specific schedule which selects only shifts labeled with 'A'.\n",
     "\n",
     "- :py:attr:`start_time`, :py:attr:`duration`, and :py:attr:`end_time` are workshift attributes. We use :py:meth:`pandas.Timestamp.ceil` to round up the end time of a workshift to the beginning of the next base unit of the timeboard.\n"
    ]
@@ -1524,7 +1524,7 @@
    "source": [
     "### Per-shift wage\n",
     "\n",
-    "Suppose that the staff of *Kings and Queens Ltd.* comprises team 'A' of the call center operators. The operators are paid 80 coins per shift. The task is to calculate the wages payable for a week of 17 April 2017. \n",
+    "Suppose that the staff of *Kings and Queens Ltd.* forms the team 'A' of the call center operators. The operators are paid 80 coins per shift. The task is to calculate the wages payable for a week of 17 April 2017. \n",
     "\n",
     "(For your reference, the schedule of team's shifts for this week has been generated in an earlier example; it contains 6 shifts.)"
    ]
@@ -1682,7 +1682,7 @@
     "\n",
     "- :py:meth:`.Interval.overlap` is a part of the chain of methods in line 8. It returns the interval that is the intersection of two intervals: the employee's tenure and the pay period.\n",
     "\n",
-    "- :py:meth:`.Interval.count` is the last method called in line 8. It returns the number of on duty workshifts in the given interval. Shifts are classified as \"on duty\" or \"off duty\" according to the schedule which is supplied to the method. By default, the method uses the default schedule of the timeboard. It would not be suitable for our purpose as under the default schedule every shift is on duty (the call center is always working). Hence we passed the specific schedule which selects only shifts labeled with 'A'.\n"
+    "- :py:meth:`.Interval.count` is the last method called in line 8. It returns the number of on-duty workshifts in the given interval. Shifts are classified as \"on duty\" or \"off duty\" according to the schedule which is supplied to the method. By default, the method uses the default schedule of the timeboard. It would not be suitable for our purpose as under the default schedule every shift is on duty (the call center is always working). Hence we passed the specific schedule which selects only shifts labeled with 'A'.\n"
    ]
   },
   {
@@ -1849,7 +1849,7 @@
    },
    "source": [
     "\n",
-    "This snippet is analogous to the previous example. The only change is that in line 8, instead of ``count()``, the last method called is :py:meth:`.Interval.worktime`. With this timeboard ``worktime()`` returns the total count of hours in all on duty workshifts of the interval. As with ``count()``, a schedule is passed to ``worktime()`` in order to tell on duty shifts from off duty ones.\n"
+    "This snippet is analogous to the previous example. The only change is that in line 8, instead of ``count()``, the last method called is :py:meth:`.Interval.worktime`. With this timeboard ``worktime()`` returns the total count of hours in all on-duty workshifts of the interval. As with ``count()``, a schedule is passed to ``worktime()`` in order to tell on-duty shifts from off-duty ones.\n"
    ]
   },
   {
